[gd_scene load_steps=10 format=2]

[ext_resource path="res://kongtext.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/other/inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/hub_menu.gd" type="Script" id=3]
[ext_resource path="res://scenes/other/black_intro.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "slots_light_up"
tracks/0/type = "value"
tracks/0/path = NodePath("wep_slot1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.54902, 0.54902, 0.54902, 1 ), Color( 1, 1, 1, 1 ), Color( 0.549664, 0.549664, 0.549664, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wep_slot2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.54902, 0.54902, 0.54902, 1 ), Color( 1, 1, 1, 1 ), Color( 0.54902, 0.54902, 0.54902, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[node name="hub_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="tab_menu" type="Panel" parent="."]
anchor_left = -0.007
anchor_right = 0.982
anchor_bottom = 1.0
margin_left = 0.993829
margin_right = 17.2797
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory" parent="tab_menu" instance=ExtResource( 2 )]
margin_left = 420.0
margin_top = 18.0
margin_right = 997.0
margin_bottom = 274.0
max_columns = 10
itself = "inventory"
place = "hub"

[node name="vault" parent="tab_menu" instance=ExtResource( 2 )]
margin_left = 420.0
margin_top = 309.0
margin_right = 997.0
margin_bottom = 565.0
max_columns = 10
itself = "vault"
place = "hub"

[node name="wep_slot1" type="Panel" parent="tab_menu"]
self_modulate = Color( 0.549664, 0.549664, 0.549664, 1 )
margin_left = 31.0
margin_top = 33.0
margin_right = 219.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon1" type="TextureRect" parent="tab_menu/wep_slot1"]
anchor_right = 0.452
margin_left = 44.0
margin_top = -3.0
margin_right = -8.976
margin_bottom = 24.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wep_slot2" type="Panel" parent="tab_menu"]
self_modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_left = 31.0
margin_top = 128.0
margin_right = 219.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="tab_menu/wep_slot2"]
margin_left = 46.0
margin_right = 93.0
margin_bottom = 26.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acc_slot1" type="Panel" parent="tab_menu"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_left = 31.0
margin_top = 278.0
margin_right = 115.0
margin_bottom = 355.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon1" type="TextureRect" parent="tab_menu/acc_slot1"]
margin_right = 84.0
margin_bottom = 77.0

[node name="acc_slot2" type="Panel" parent="tab_menu"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_left = 31.0
margin_top = 370.631
margin_right = 115.0
margin_bottom = 447.631
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="tab_menu/acc_slot2"]
margin_left = 94.0
margin_top = -93.0
margin_right = 178.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acc_slot3" type="Panel" parent="tab_menu"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_left = 125.0
margin_top = 370.631
margin_right = 209.0
margin_bottom = 447.631
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon3" type="TextureRect" parent="tab_menu/acc_slot3"]
margin_left = 94.0
margin_top = -93.0
margin_right = 178.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acc_slot4" type="Panel" parent="tab_menu"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_left = 312.783
margin_top = 278.0
margin_right = 396.783
margin_bottom = 355.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon4" type="TextureRect" parent="tab_menu/acc_slot4"]
margin_right = 84.0
margin_bottom = 77.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acc_slot5" type="Panel" parent="tab_menu"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_left = 218.783
margin_top = 278.0
margin_right = 302.783
margin_bottom = 355.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon5" type="TextureRect" parent="tab_menu/acc_slot5"]
margin_left = -188.0
margin_top = 93.0
margin_right = -104.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acc_slot6" type="Panel" parent="tab_menu"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_left = 125.0
margin_top = 278.0
margin_right = 209.0
margin_bottom = 355.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon6" type="TextureRect" parent="tab_menu/acc_slot6"]
margin_top = 93.0
margin_right = 84.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="swap" type="Button" parent="tab_menu"]
margin_left = 75.0
margin_top = 207.0
margin_right = 179.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 1 )
text = "SWAP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_b" type="Button" parent="tab_menu"]
margin_left = 27.047
margin_top = 526.564
margin_right = 159.047
margin_bottom = 575.564
custom_fonts/font = SubResource( 2 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="tab_menu"]
anims/slots_light_up = SubResource( 3 )

[node name="background_loc" type="Panel" parent="."]
visible = false
margin_right = 1027.0
margin_bottom = 601.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="loc_jun_b" type="Button" parent="background_loc"]
margin_left = 126.321
margin_top = 89.5556
margin_right = 292.321
margin_bottom = 139.556
custom_fonts/font = SubResource( 4 )
text = "JUNGLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loc_label" type="Label" parent="background_loc"]
margin_left = 408.215
margin_top = 21.4187
margin_right = 858.214
margin_bottom = 72.4187
custom_fonts/font = SubResource( 5 )
text = "LOCATIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_b2" type="Button" parent="background_loc"]
margin_left = 20.8728
margin_top = 526.564
margin_right = 152.873
margin_bottom = 575.564
custom_fonts/font = SubResource( 2 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tab_menu_b" type="Button" parent="background_loc"]
margin_left = 198.873
margin_top = 526.564
margin_right = 330.873
margin_bottom = 575.564
custom_fonts/font = SubResource( 2 )
text = "INVENTORY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="black_intro" parent="." instance=ExtResource( 4 )]
self_modulate = Color( 1, 1, 1, 1 )
[connection signal="gui_input" from="tab_menu/wep_slot1/icon1" to="tab_menu/inventory" method="_on_icon1_gui_input"]
[connection signal="gui_input" from="tab_menu/wep_slot2/icon2" to="tab_menu/inventory" method="_on_icon2_gui_input"]
[connection signal="pressed" from="tab_menu/swap" to="." method="_on_swap_pressed"]
[connection signal="pressed" from="tab_menu/back_b" to="." method="_on_back_b_pressed"]
[connection signal="pressed" from="background_loc/loc_jun_b" to="." method="_on_loc_jun_b_pressed"]
[connection signal="pressed" from="background_loc/back_b2" to="." method="_on_back_b2_pressed"]
[connection signal="pressed" from="background_loc/tab_menu_b" to="." method="_on_tab_menu_b_pressed"]
